--- a/Project/website/static/styles/home.css
+++ b/Project/website/static/styles/home.css
@@ -97,6 +97,7 @@
     font-size: 2em;
     background-color: transparent;
     border: transparent;
+    cursor: pointer;
 }
 
 .frnd_req_btn:hover{
