--- a/Project/website/static/styles/profile.css
+++ b/Project/website/static/styles/profile.css
@@ -115,7 +115,7 @@ ul {
   overflow: hidden;
     width: 10vw;
     height: 20vh;
-    border: transparent;
+    border: dotted rgb(0, 255, 0);
     border-radius: 50%;
     display: flex;
     flex-direction: column;
