--- a/Project/website/templates/profile.html
+++ b/Project/website/templates/profile.html
@@ -44,6 +44,13 @@
 
 {%endif%}
 
+<div class="frnd_list">
+  FRIENDS
+
+</div>
+
+
+
 <div class="quiz_container">
     <span class="container_title">QUIZES</span>
     <br>
