--- a/Project/website/templates/quizmaker.html
+++ b/Project/website/templates/quizmaker.html
@@ -14,14 +14,15 @@ Quiz Maker
 {%block content%}
 
 <form method="post" class="form">
-    <div class="container"></div>
-    <h1 align = "center"> QUIZ MAKER</h1>
+    <h1 align = "center" id="title"> QUIZ MAKER</h1>
     <br>
+<div class="container">
     <label class="text1"> Add quiz name   </label> 
     <input type="text" class="text text1"  id="quiz_name" name="quiz_name"/>
     <br>
     <label class="text1"> Add description </label>
     <input type="text" class="text text1"  id="quiz_desc" name="quiz_desc"/>
+</div>
     <div class="ques_container">
         <div class="question" id="question1">
             <h3> Question 1 </h3>
