--- a/Project/website/static/styles/quiz_maker_style.css
+++ b/Project/website/static/styles/quiz_maker_style.css
@@ -1,3 +1,38 @@
+@keyframes fadeIn {  
+    from {  
+        opacity:0;  
+    }  
+ 
+    to {  
+        opacity:1;  
+    }  
+ }
+
+ @keyframes slideInTop {
+    0% {
+      transform: translateY(-100%);
+      opacity: 0;
+    }
+    50%{
+        transform: translateY(-100%);
+        opacity: 0;
+    }
+    
+    100% {
+      transform: translateY(0);
+      opacity: 100%;
+    }
+  }
+
+  @keyframes slideInLeft {
+    0% {
+      transform: translatex(-100%);
+    }
+    100% {
+      transform: translatex(0);
+    }
+  }
+
 .text1{
     font-size: 2em;
     margin: 5px;
@@ -8,6 +43,26 @@
     margin: 5px;
 }
 
+#title{
+    animation: fadeIn 0.7s ease-in; 
+}
+
+
+
+.container{
+    animation: 1.3s ease-out  1 slideInTop;
+}
+
+.ques_container{
+    animation: 2.1s ease-out  1 slideInTop;
+}
+
+.submit_btn{
+    animation: 2.1s ease-out  1 slideInTop;
+}
+
+
+
 .submit_btn{
     height: 2vh;
     width: 3vw;
@@ -16,8 +71,6 @@
     color: rgb(0, 255, 0);
 }
 
-
-
 .question{ 
     height: max-content;
     width: max-content; 
@@ -25,6 +78,10 @@
     border-radius: 4%;
     margin: 1%;
     padding: 1%;
+}
+
+.secondary_question{
+    animation: 1s ease-out  1 slideInLeft;
 }
 
 
